# pablo-the-corridor-manager

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml  tsconfig.json
convex/: constants.ts  jobs.ts  optouts.ts  people.ts  schema.ts  seedData.ts  seedStatus.ts  seeds.ts  status.ts  tasks.ts  weeks.ts
convex/_generated/: api.d.ts
convex/lib/: time.ts  uniqueness.ts
docs/: QUICKSTART.md
src/: app.ts  bot.py  config.py  menus.py  reminders.py  week_manager.py
src/config/: env.ts
src/convex/: client.ts  refs.ts
src/domain/: callbacks.ts  constants.ts
src/handlers/: __init__.py  info_handlers.py  optout_handlers.py  task_handlers.py
src/jobs/: scheduler.ts
src/telegram/: client.ts  menus.ts  router.ts
src/types/: telegram.ts
