[project]
name = "pablo-the-corridor-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.0",
    "apscheduler==3.10.4",
    "faker==20.1.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "python-telegram-bot==20.7",
    "sqlalchemy==2.0.23",
]
